<resources>
    <string name="app_name">Chinwag</string>
    <string name="network_connection_error">Internet connection lost, please retry again</string>
    <string name="network_connection_back">Internet connection is back</string>
    <string name="network_default_error">Something wrong happened, please retry again</string>
    <string name="network_internal_error">Our systems got an error, please retry again</string>
    <string name="network_server_not_available">Our services are under maintenance, please retry after some time</string>
    <string name="server_connection_error">Not able to connect, please retry again</string>
    <string name="permission_denied">Permission Denied</string>
    <string name="hint_enter_a_city_name">Enter a City Name</string>
    <string name="label_search">Search</string>
    <string name="str_network_error">Whoops!! Network error, Please try again.</string>
    <string name="weather_type_icon">Weather Type Icon</string>
    <string name="background_image">Background Image</string>
    <string name="msg_please_enter_city_name">Please enter a City Name</string>
    <string name="hint_enter_city_name">Search City name</string>
    <string name="agree_terms_and_condition">I agree to %1$s Terms &amp; Conditions and Privacy Policy</string>
    <string name="primary_channel">TheAppineers Channel</string>
    <string name="secondary_channel">Secondary Channel</string>
    <string name="msg_looged_in_from_other_device">You are logged out now because you have logged in from some other device.</string>
    <string name="app_logo">app logo here</string>
    <string name="bad_weather_bg">Bad weather image for bg</string>
    <string name="weather_icon">Weather icon</string>
    <string name="boarding_image">Boarding Image</string>
    <string name="facebook_icon">Login through Facebook</string>
    <string name="google_icon">Login through GMail</string>
    <string name="apple_icon">Login through Apple</string>
    <string name="add_profile_icon">Add profile pic icon</string>
    <string name="gallery_image">Gallery image here</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_n_conditions" >Terms &amp; Conditions</string>
    <string name="hint_username">Username</string>
    <string name="hint_mobile_number">Mobile Number</string>
    <string name="hint_password">Password</string>
    <string name="hint_email">Email Address</string>
    <string name="hint_address">Address</string>
    <string name="hint_city">City</string>
    <string name="hint_state">State</string>
    <string name="hint_zip_code">Zip Code</string>
    <string name="hint_dob">Date of Birth</string>
    <string name="hint_FirstName">First Name</string>
    <string name="hint_LastName">Last Name</string>
    <string name="hint_old_password">Old Password</string>
    <string name="hint_new_password">New Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="hint_brief_explain_message">Briefly explain what happened</string>
    <string name="label_login_button">Login</string>
    <string name="label_save_button">Save</string>
    <string name="label_clear_button">Clear</string>
    <string name="label_next_button">Next</string>
    <string name="label_create_account_button">Create</string>
    <string name="label_previous_button">Back</string>
    <string name="label_skip_button">Skip</string>
    <string name="label_send_reset_link_button">Send Link</string>
    <string name="label_resend_otp_button">Resend OTP</string>
    <string name="label_submit_otp_button">Submit</string>
    <string name="label_reset_password_button">Reset Password</string>
    <string name="label_cancel_button">Cancel</string>
    <string name="label_done_button">Done</string>
    <string name="label_update_button">Update</string>
    <string name="label_yes_button">Yes</string>
    <string name="label_no_button">No</string>
    <string name="label_send_button">Send</string>
    <string name="label_agree_button">Agree</string>
    <string name="label_not_now_button">Not Now</string>
    <string name="label_later_button">Later</string>
    <string name="label_rate_now_button">Rate Now</string>
    <string name="label_start_button">start</string>
    <string name="alert_enter_brief">Please enter brief explanation</string>
    <string name="label_forgot_password_text">Forgot Password?</string>
    <string name="label_forgot_password_toolbar_text">Forgot Password</string>
    <string name="label_verification_otp_toolbar_text">Verification Code</string>
    <string name="label_reset_password_toolbar_text">Reset Password</string>
    <string name="label_image_cropper_toolbar_text">Crop</string>
    <string name="label_sign_up_toolbar_text">Create Account</string>
    <string name="label_static_page_toolbar_text">Title</string>
    <string name="label_edit_profile_toolbar_text">Edit Profile</string>
    <string name="label_send_feedback_toolbar_text">Send Feedback</string>
    <string name="label_change_password_toolbar_text">Change Password</string>
    <string name="label_change_phone_number_toolbar_text">Change Phone Number</string>
    <string name="label_friends_fragment_toolbar_text">Friends</string>
    <string name="label_home_fragment_toolbar_text">Home</string>
    <string name="label_settings_fragment_toolbar_text">Settings</string>
    <string name="label_home_fragment_message_text">Message</string>
    <string name="label_profile_fragment_message_text">My Profile</string>
    <string name="label_do_not_have_account_text">Don\'t  have an Account?</string>
    <string name="label_create_now_text">Create Now!</string>
    <string name="label_forgot_password_otp_message_text">We just need your registered phone number to send OTP.</string>
    <string name="label_forgot_password_email_message_text">Enter your registered email address to receive the access code for resetting your password</string>
    <string name="label_enter_verification_code_message_text">Please type the verification code sent to</string>
    <string name="label_change_phone_number_message_text">No worries! Please enter your new phone number over here, we will send a verification code.</string>
    <string name="label_did_not_receive_otp_text">Didn\'t receive OTP code?</string>
    <string name="label_feedback_report_problem">You can send us your feedback about the %1$s application. We would love to hear suggestions from you.</string>
    <string name="label_account_settings_text">Account Settings</string>
    <string name="label_notifications_text">Notifications</string>
    <string name="label_go_adv_free_text">Go Ad Free $0.99</string>
    <string name="label_support_text">Support</string>
    <string name="label_about_us_text">About Us</string>
    <string name="label_send_feedback_text">Send Feedback</string>
    <string name="label_share_app_text">Share this App</string>
    <string name="label_delete_account_text">Delete Account</string>
    <string name="label_log_out_text">Logout</string>
    <string name="label_change_password_text">Change Password</string>
    <string name="label_privacy_policy_text">Privacy Policy</string>
    <string name="label_terms_and_condition_text">Terms &amp; Conditions</string>
    <string name="label_rate_app_text">Rate this App</string>
    <string name="label_logs_text">Logs</string>
    <string name="label_new_version_available_text">New Version Available!</string>
    <string name="label_rate_message_text">If you enjoy using this app, would you mind taking a moment to rate it? It won\'t take more than minute. Thank you for your support!</string>
    <string name="setting">Setting</string>
    <string name="profile">Profile</string>
    <string name="message">Message</string>
    <string name="friends">Friends</string>
    <string name="home">Home</string>
    <string name="valid_mobile_number">"Enter valid mobile number"</string>
    <string name="empty_mobile_number">"Enter mobile number"</string>
    <string name="mobile_number_length">"Enter 10 digit mobile number"</string>
    <string name="valid_email">"Enter valid email"</string>
    <string name="empty_email">"Enter email"</string>
    <string name="valid_password">"Enter valid password"</string>
    <string name="password_not_same">"New and Confirm password should same"</string>
    <string name="password_policy">Password should contain min 8 character with 1 Alphabet and 1 Special character.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="alert_enter_user_name">Please enter username.</string>
    <string name="alert_user_name_length">Username must contain 5 to 20 characters.</string>
    <string name="alert_first_name_length">First name must contain 1 to 80 characters.</string>
    <string name="alert_last_name_length">Last name must contain 1 to 80 characters.</string>
    <string name="alert_phone_number_length">Phone Number must contain 10 to 12 characters.</string>
    <string name="alert_enter_dob">Please enter date of birth.</string>
    <string name="alert_select_street_address">Please select address.</string>
    <string name="alert_select_state">Please select state.</string>
    <string name="alert_enter_city">Please enter city.</string>
    <string name="alert_enter_zip_code">Please enter zip code.</string>
    <string name="alert_invalid_zip_code_character">Zip Code should contain number or characters.</string>
    <string name="alert_min_zip_code_length">Zip Code must contain 5 to 10 characters.</string>
    <string name="alert_msg_password_and_confirm_password_not_same">Password and confirm password must be same.</string>
    <string name="alert_accept_tnc_and_privacy">To create an account, please agree the terms &amp; conditions and privacy policy.</string>
    <string name="alert_enter_otp">Please enter OTP</string>
    <string name="alert_invalid_otp">Entered OTP is invalid</string>
    <string name="msg_no_user_data">User data not available</string>
    <string name="resend">Resend</string>
    <string name="msg_resend_email">Do you want to resend verification email ?</string>
    <string name="alert_enter_first_name">Please enter first name</string>
    <string name="alert_invalid_first_name_character">Please ener a valid first name. Numbers and special characters are not allowed.</string>
    <string name="alert_enter_last_name">Please enter last name</string>
    <string name="alert_invalid_last_name_character">Please enter a valid last name. Numbers and special characters are not allowed.  </string>
    <string name="alert_enter_email">Please enter email</string>
    <string name="alert_enter_valid_email">Please enter valid email</string>
    <string name="alert_enter_mobile_number">Please enter phone number</string>
    <string name="alert_invalid_phone_number">Please enter valid phone number</string>
    <string name="alert_invalid_phone_number_format">Please enter valid phone number</string>
    <string name="alert_enter_password">Please enter password</string>
    <string name="alert_enter_old_password">Please enter old password</string>
    <string name="alert_enter_new_password">Please enter new password</string>
    <string name="alert_enter_confirm_password">Please enter confirm password</string>
    <string name="alert_invalid_user_name_character">Please enter a valid Username. Special characters and white spaces are not allowed.</string>
    <string name="alert_min_user_name_length">Username must contain at least %1$d character</string>
    <string name="alert_min_first_name_length">First name minimum length should be %1$d character</string>
    <string name="alert_min_last_name_length">First name minimum length should be %1$d character</string>
    <string name="alert_max_email_length">Email maximum length should be %1$d character</string>
    <string name="alert_confirm_password_not_match">New password and confirm password must be same</string>
</resources>