<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_16sdp"
    app:cardBackgroundColor="@android:color/white"
    app:cardElevation="@dimen/dimen_4dp"
    app:cardCornerRadius="@dimen/dimen_4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/appCompatTextView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:gravity="start"
            android:padding="@dimen/_8sdp"
            android:text="@string/label_rate_app_text"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:gravity="start"
            android:padding="@dimen/_8sdp"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:text="@string/label_rate_message_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appCompatTextView3"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/mbtnRateLater"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_later_button"
            android:textColor="@android:color/darker_gray"
            app:layout_constraintBottom_toBottomOf="@+id/mbtnRateNow"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/mbtnRateNow" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/mbtnCancel"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_8sdp"
            android:text="@string/label_cancel_button"
            android:textColor="@android:color/darker_gray"
            app:layout_constraintBottom_toBottomOf="@+id/mbtnRateNow"
            app:layout_constraintEnd_toStartOf="@+id/mbtnRateNow"
            app:layout_constraintTop_toTopOf="@+id/mbtnRateNow" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/mbtnRateNow"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:text="@string/label_rate_now_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvMessage" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>