<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@color/translucent_black"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        app:cardBackgroundColor="@color/white"
        android:layout_margin="@dimen/_16sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/_8sdp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:padding="@dimen/_8sdp"
                android:text="@string/label_rate_app_text"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/text_dimen_16sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:padding="@dimen/_8sdp"
                android:text="@string/label_rate_message_text"
                android:textColor="@color/colorTextBlack"
                android:textSize="@dimen/text_dimen_14sp" />


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp">

                <TextView
                    android:id="@+id/tvLater"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:padding="@dimen/_8sdp"
                    android:text="@string/label_later_button"
                    android:textColor="@color/colorTextGrey"
                    android:textSize="@dimen/text_dimen_14sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvCancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:padding="@dimen/_8sdp"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:text="@string/label_cancel_button"
                    android:textColor="@color/colorTextGrey"
                    android:textSize="@dimen/text_dimen_14sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toStartOf="@+id/tvRateNow"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvRateNow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:padding="@dimen/_8sdp"
                    android:text="@string/label_rate_now_button"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/text_dimen_14sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


            </androidx.constraintlayout.widget.ConstraintLayout>


        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>